Fixed Rest Calls from Workers